--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 	  		justify-content: center;
 	  		align-items: center;
 		}
+		.datos{
+			width: 33%;
+		}
 		.datos img{
 			opacity: 0.7;
 			padding-bottom: 80px;
@@ -94,7 +97,7 @@
 			<h1 style="width: 100%" class="header-club">Metas a mediano y largo plazo:</h1>	
 			<ol>
 				<li>Ser competitivos, siendo protagonistas en los torneos que se participen.</li>
-				<li>Vinculación escuela'empresa donde se recluten estudiantes para implementar proyectos en la Industria 4.0.</li>
+				<li>Vinculación escuela-empresa donde se recluten estudiantes para implementar proyectos en la Industria 4.0.</li>
 				<li>Ser protragonistas de eventos académicos como Hackatones y Startups con la participación de universidades y/o tecnológicos locales.</li>
 				<li>Participación destacada en eventos locales, regionales y nacionales como lo es el ENEIT (Evento Nacional Estudiantil de Innovación Tecnológica).</li>
 			</ol>
