--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     		background: transparent;
 		}
 		.header-club{
-			padding-left: 20%; 
+			padding-left: 15%; 
 			display: inline-flex;
 			color: #800040; 
 			font-size: 3em; 
@@ -57,9 +57,27 @@
 			-moz-transition: 0.3s all ease-in-out 0s;
 		}
 		ol{
-			font-family: roboto;
+			font-family: 'Kosugi', sans-serif;
 			font-size: 2em;
 			line-height: 130%;
+		}
+		ul{
+			margin: auto;
+			padding-left: 20%;
+			font-family: 'Kosugi', sans-serif;
+			font-size: 1.5em;
+			line-height: 100%;
+		}
+		.header-miembros{
+			padding-left: 15%; 
+			display: inline-block;
+			color: #800040; 
+			font-size: 2.5em; 
+			font-weight: bold; 
+			font-family: roboto;
+		}
+		.sin-bolitas{
+			color: #f4f4f4;
 		}
 	</style>
 	<div style="display: flex;">
@@ -101,6 +119,37 @@
 				<li>Ser protragonistas de eventos académicos como Hackatones y Startups con la participación de universidades y/o tecnológicos locales.</li>
 				<li>Participación destacada en eventos locales, regionales y nacionales como lo es el ENEIT (Evento Nacional Estudiantil de Innovación Tecnológica).</li>
 			</ol>
+		</div>
+	</div>
+	<div class="container">
+		<div style="width: 50%">
+			<h1 class="header-miembros">Participantes Iniciales</h1>
+			<ul>
+				<li>Luis David López Valdes</li>
+				<li>David Magallan Jimenez</li>
+				<li>Andres Ramos Cordoba</li>
+				<li>Josue Fernando Pinedo Orta</li>
+				<li>Alejandro Vilchis</li>
+				<li>Sergio Saucedo</li>
+				<li>Héctor Adrián Garza Cárdenas</li>
+				<li>Abel Monsivais Badilla</li>
+			</ul>
+		</div>
+		<div style="width: 50%">
+			<h1 class="header-miembros">Asesores Principales</h1>
+			<ul>
+				<li>Dr. Ernesto Liñan Garcia</li>
+				<li>M.C. Jonam Leonel </li>
+				<li>M.C Juan Fraustro de la O</li>
+				<li class="sin-bolitas"> </li>
+				<li class="sin-bolitas"> </li>
+				<li class="sin-bolitas"> </li>
+				<li class="sin-bolitas"> </li>
+				<li class="sin-bolitas"> </li>
+			</ul>
+		</div>
+		<div style="width: 100% padding-left: 40%">
+			<h1 class="header-club">Gracias!</h1>
 		</div>
 	</div>
 </body>
