--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		}
 		.datos img{
 			opacity: 0.7;
-			padding-bottom: 80px;
+			padding-bottom: 10px;
 			transform: scale(0.7);
 			-webkit-transform: scale(0.7);
 			-moz-transform: scale(0.7);
@@ -79,26 +79,149 @@
 		.sin-bolitas{
 			color: #f4f4f4;
 		}
+		/*--Carrousel----*/
+		.carousel {
+		  position: relative;
+		  width: 1000px;
+		  height: 600px;
+		  overflow: hidden;
+		  margin: 0 auto;
+		  box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+		}
+		.carousel:hover .slide:after,
+		.carousel:hover .counter,
+		.carousel:hover .slide:before {
+		  opacity: 1;
+		}
+		.slide {
+		  float: right;
+		  position: absolute;
+		  z-index: 1;
+		  width: 1000px;
+		  height: 600px;
+		  background-color: #eee;
+		  text-align: center;
+		  transition: opacity 0.4s;
+		  opacity: 1;
+		}
+		.slide:before {
+		  content: attr(annot);
+		  display: block;
+		  position: absolute;
+		  left: 20px;
+		  bottom: 20px;
+		  color: rgba(255,255,255,0.9);
+		  font-size: 14px;
+		  font-weight: 300;
+		  z-index: 12;
+		  opacity: 0;
+		  transition: opacity 0.3s;
+		  text-shadow: 0 0 1px #000;
+		}
+		.slide:after {
+		  content: attr(slide);
+		  display: block;
+		  position: absolute;
+		  bottom: 0;
+		  transition: opacity 0.3s;
+		  width: 100%;
+		  height: 80px;
+		  opacity: 0;
+		  background-image: linear-gradient(transparent, rgba(0,0,0,0.5));
+		  text-align: left;
+		  text-indent: 549px;
+		  line-height: 101px;
+		  font-size: 13px;
+		  color: rgba(255,255,255,0.9);
+		  text-shadow: 0 0 1px #000;
+		}
+		.counter {
+		  position: absolute;
+		  bottom: 20px;
+		  right: 1px;
+		  height: 20px;
+		  width: 86%;
+		  z-index: 2;
+		  text-align: center;
+		  color: #fff;
+		  line-height: 21px;
+		  font-size: 13px;
+		  opacity: 0;
+		  transition: opacity 0.3s;
+		}
+		.faux-ui-facia {
+		  top: 0;
+		  right: 0;
+		  float: right;
+		  position: absolute;
+		  margin-top: 0;
+		  z-index: 9;
+		  height: 100%;
+		  width: 100%;
+		  opacity: 0;
+		  cursor: pointer;
+		}
+		.faux-ui-facia:checked {
+		  z-index: 8;
+		}
+		.faux-ui-facia:checked + .slide {
+		  opacity: 0;
+		}
+		.faux-ui-facia:checked:nth-child(1):checked {
+		  z-index: 9;
+		}
+		.faux-ui-facia:nth-child(1):checked {
+		  float: left;
+		  z-index: 9;
+		}
+		.faux-ui-facia:nth-child(1):checked + .slide {
+		  opacity: 1;
+		}
+		.faux-ui-facia:nth-child(1):checked ~ .faux-ui-facia {
+		  float: left;
+		  z-index: 8;
+		}
+		.faux-ui-facia:nth-child(1):checked ~ .faux-ui-facia + .slide {
+		  opacity: 0;
+		}
+		.faux-ui-facia:nth-child(1):checked ~ .faux-ui-facia:checked {
+		  z-index: 9;
+		}
+		.faux-ui-facia:nth-child(1):checked ~ .faux-ui-facia:checked + .slide {
+		  opacity: 1;
+		}
 	</style>
 	<div style="display: flex;">
 		<img style="padding-left: 10%" src="images/tecnm.png" alt="TecNM">
 		<h1 class="header-club">Club de IoT</h1>
 		<img style="padding-left: 20%" src="images/its.png" alt="ITS">
 	</div>
-	<div class="image parallax-window" data-parallax="scroll" data-image-src="images/fondo2.png"></div>
-	<div style="margin-top: 0%">
-		<div class="container">
-			<div class="datos">
-				<img src="images/mision.png" alt="Mision" style="">
-			</div>
-			<div class="datos">
-				<img src="images/vision.png" alt="Vision">		
-			</div>
-			<div class="datos">
-				<img src="images/valores.png" alt="Valores">		
+	<div class="image parallax-window" data-parallax="scroll" data-image-src="images/fondo3-01.png"></div>
+	
+	<section>
+		<div class="container" style="padding-top: 10%; padding-bottom: 10%">
+			<div class="carousel">
+
+				<input type="checkbox" class="faux-ui-facia">
+				<div class="slide" slide="3">
+					<img src="images/c-3.png" alt="Slide 3">
+				</div>
+
+				<input type="checkbox" class="faux-ui-facia">
+				<div class="slide" slide="2">
+					<img src="images/c-2.png"  alt="Slide 2">
+				</div>
+
+				<input type="checkbox" class="faux-ui-facia"> 
+				<div class="slide" slide="1">
+					<img src="images/c-1.png"  alt="Slide 1">
+				</div>
+
+				<div class="counter" count="3"> / 3</div>
 			</div>
 		</div>
-	</div>
+	</section>
+
 	<div class="container">
 		<div style="width: 80%">
 			<h1 style="width: 100%" class="header-club">Metas a corto plazo:</h1>	
@@ -129,10 +252,11 @@
 				<li>David Magallan Jimenez</li>
 				<li>Andres Ramos Cordoba</li>
 				<li>Josue Fernando Pinedo Orta</li>
-				<li>Alejandro Vilchis</li>
-				<li>Sergio Saucedo</li>
+				<li>Alejandro Alberto Ramirez Vilchis</li>
+				<li>Sergio Saucedo Leyva</li>
 				<li>Héctor Adrián Garza Cárdenas</li>
-				<li>Abel Monsivais Badilla</li>
+				<li>Abel Monsivais Badillo</li>
+				<li>Mauricio Andres Vélez Sánchez</li>
 			</ul>
 		</div>
 		<div style="width: 50%">
@@ -141,6 +265,7 @@
 				<li>Dr. Ernesto Liñan Garcia</li>
 				<li>M.C. Jonam Leonel </li>
 				<li>M.C Juan Fraustro de la O</li>
+				<li class="sin-bolitas"> </li>
 				<li class="sin-bolitas"> </li>
 				<li class="sin-bolitas"> </li>
 				<li class="sin-bolitas"> </li>
