--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
 			font-weight: bold; 
 			font-family: roboto;
 		}
+		.header-gracias{
+			display: inline-flex;
+			color: #800040; 
+			font-size: 3em; 
+			font-weight: bold; 
+			font-family: roboto;
+			text-align: center;
+		}
 		.container {
 			display: flex;
 			flex-wrap: wrap;
@@ -60,6 +68,9 @@
 			font-family: 'Kosugi', sans-serif;
 			font-size: 2em;
 			line-height: 130%;
+		}
+		ol > li{
+			padding-left: 1%;
 		}
 		ul{
 			margin: auto;
@@ -226,21 +237,21 @@
 		<div style="width: 80%">
 			<h1 style="width: 100%" class="header-club">Metas a corto plazo:</h1>	
 			<ol>
-				<li>Instituir el club de Internet de las cosas (IoT).</li>
-				<li>Habilitar un área de desarollo.</li>
-				<li>Demostración de prototipos de IoT en el concurso de programación local 2018.</li>
-				<li>Constituir equipos de trabajo multidisciplinarios.</li>
-				<li>Difundir a preparatorias módulos de especialidad de la Industria 4.0 para incrementar la matricula en las carreras.</li>
-				<li>Participación en el Hackaton Talen Land en la ciudad de Guadalajara, Jalisco.</li>
+				<li style="list-style-image: url('images/1.png');">Instituir el club de Internet de las cosas (IoT).</li>
+				<li style="list-style-image: url('images/2.png');">Habilitar un área de desarrollo.</li>
+				<li style="list-style-image: url('images/3.png');">Demostración de prototipos de IoT en el concurso de programación local 2018.</li>
+				<li style="list-style-image: url('images/4.png');">Constituir equipos de trabajo multidisciplinarios.</li>
+				<li style="list-style-image: url('images/5.png');">Difundir a preparatorias los módulos de especialidad de la Industria 4.0 para incrementar la matricula en las carreras.</li>
+				<li style="list-style-image: url('images/6.png');">Participación en el Hackaton Talent Land en la ciudad de Guadalajara, Jalisco.</li>
 			</ol>
 		</div>
 		<div style="width: 80%">
 			<h1 style="width: 100%" class="header-club">Metas a mediano y largo plazo:</h1>	
 			<ol>
-				<li>Ser competitivos, siendo protagonistas en los torneos que se participen.</li>
-				<li>Vinculación escuela-empresa donde se recluten estudiantes para implementar proyectos en la Industria 4.0.</li>
-				<li>Ser protragonistas de eventos académicos como Hackatones y Startups con la participación de universidades y/o tecnológicos locales.</li>
-				<li>Participación destacada en eventos locales, regionales y nacionales como lo es el ENEIT (Evento Nacional Estudiantil de Innovación Tecnológica).</li>
+				<li style="list-style-image: url('images/7.png');">Ser competitivos, siendo protagonistas en los torneos que se participen.</li>
+				<li style="list-style-image: url('images/8.png');">Vinculación escuela-empresa donde se recluten estudiantes para implementar proyectos en la Industria 4.0.</li>
+				<li style="list-style-image: url('images/9.png');">Ser protragonistas de eventos académicos como Hackatones y Startups con la participación de universidades y/o tecnológicos locales.</li>
+				<li style="list-style-image: url('images/10.png');">Participación destacada en eventos locales, regionales y nacionales como lo es el ENEIT (Evento Nacional Estudiantil de Innovación Tecnológica).</li>
 			</ol>
 		</div>
 	</div>
@@ -250,7 +261,7 @@
 			<ul>
 				<li>Luis David López Valdes</li>
 				<li>David Magallan Jimenez</li>
-				<li>Andres Ramos Cordoba</li>
+				<li>Andres Ramos Cordova</li>
 				<li>Josue Fernando Pinedo Orta</li>
 				<li>Alejandro Alberto Ramirez Vilchis</li>
 				<li>Sergio Saucedo Leyva</li>
@@ -262,8 +273,8 @@
 		<div style="width: 50%">
 			<h1 class="header-miembros">Asesores Principales</h1>
 			<ul>
-				<li>Dr. Ernesto Liñan Garcia</li>
-				<li>M.C. Jonam Leonel </li>
+				<li>Dr. Ernesto Liñan García</li>
+				<li>M.C. Jonam Leonel Sánchez Cuevas</li>
 				<li>M.C Juan Fraustro de la O</li>
 				<li class="sin-bolitas"> </li>
 				<li class="sin-bolitas"> </li>
@@ -274,8 +285,26 @@
 			</ul>
 		</div>
 		<div style="width: 100% padding-left: 40%">
-			<h1 class="header-club">Gracias!</h1>
+			<h1 class="header-gracias">¡Gracias!</h1>
 		</div>
 	</div>
 </body>
+<footer>
+	<div class="container">
+		<div style="width: 100%; text-align: center;">
+			<img src="images/footer-sep.png"  alt="Footer SEP" style="width: 200px; height: 60px;">
+		</div>
+		<div style="text-align: center; font-family: 'Kosugi', sans-serif; color: #808080; line-height: 40%; font-size: .8em;">
+			<p>
+				Blvd. Venustiano Carranza #2400, Colonia Tecnológico. Saltillo, Coahuila, México C.P. 25280, Tel. (844) 438-9500
+			</p>
+			<p>
+				Departamento de Ingeniería en Sistemas Computacionales
+			</p>
+			<p>
+				Laboratorio de IoT
+			</p>
+		</div>
+	</div>
+</footer>
 </html>
